--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object>
 					</div>
 					<div class="project-text ">
-						<h4>case study</h4><h2><a class="underline underline-yellow" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
+						<h4>case study</h4><h2><a class="underline underline-yellow" href="kitsuneApp.html" >The Kitsune App</a></h2>
 					</div>
 				</div>
 			</div>
@@ -87,10 +87,10 @@
 			<div class="project-container flex-center">
 				<div class="project-content flex-sb">
 					<div class="project-image">
-						<object type="image/svg+xml" data="images/KitsuneBoardHomeV2.svg"> Kitsune App </object>
+						<object type="image/svg+xml" data="images/KitsuneBoardHomeV2.svg"> Kitsune Board </object>
 					</div>
 					<div class="project-text">
-						<h4>case study</h4><h2><a class="underline underline-blue" href="http://www.terrestriial.tumblr.com" target="_blank">The Kitsune App</a></h2>
+						<h4>case study</h4><h2><a class="underline underline-blue" href="kitsuneBoard.html" target="_blank">The Kitsune App</a></h2>
 					</div>
 				</div>
 			</div>
@@ -115,8 +115,11 @@
 				<div class="about-content">
 
 					<h2> Houston? </h2>
-					<p>I’m Brock, a designer, space enthusiest, and advocate Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus venenatis justo ac efficitur consectetur. Sed posuere quam at sagittis rutrum. Nullam diam nisi, blandit tempor erat at, lobortis lobortis neque. Donec ligula leo, sodales nec enim eu, lacinia luctus sapien. Nam libero purus, egestas condimentum bibendum malesuada, pharetra nec nisi. </p>
-					<p>Sed viverra volutpat purus. Mauris non urna non risus porttitor lacinia at ut tortor. Suspendisse potenti. Maecenas accumsan accumsan neque, in pretium est. Vestibulum ante ipsum primis in <a href="mailto:brockmdonaldson@gmail.com">brockmdonaldson@gmail.com</a> et ultrices posuere cubilia Curae; </p>
+					<p>I’m Brock, a designer, space enthusiast, and an advocate for using design as a gateway to improve the lives of anyone and everyone. </h3>
+					<p> I'm drawn to things I'm passionate about and learning from my experiences. Whether it's reading about newly discovered planets or trying to decide if getting a cold brew at 4pm is the right decision, each pursuit helps to shape who I am on any given day.  </p>
+					<p>I currently live and work in Toronto, where I have been designing digital experiences at Konrad Group since my graduation from York / Sheridan’s Bachelor of Design program. I’ve recently re-entered the world of code and am working on some exiting side projects with my friends through a design collective called Smolhax.</p>
+					<p>I’m always open to trying new things or collaborating on projects. If you’d like to get ahold of me shoot over an email to brockmdonaldson@gmail.com. </p>
+					<p>✌️️ </p>
 					<div class="social-about">
 						<ul class="social-links">
 							<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
@@ -165,19 +168,13 @@
 									<li><a href="http://www.imdb.com/title/tt1478338" target="_blank"> // Creative Confidence </a></li>
 									<li><a href="http://www.imdb.com/title/tt2395695" target="_blank"> // Design of Everyday Things </a></li>
 									<li><a href="http://www.imdb.com/title/tt1570728" target="_blank"> // Physics of the Impossible</a></li>
-									<li><a href="http://www.imdb.com/title/tt1282140" target="_blank"> // Ready Player One </a></li>
-									<li><a href="http://www.imdb.com/title/tt1798709" target="_blank"> // The Martian </a></li>
-									<li><a href="http://www.imdb.com/title/tt0813715" target="_blank"> // The Time Keeper </a></li>
 								</ul>
 							</div>
 							<div class="recommendations">
 								<ul class="reco-links">
-									<li><a href="http://www.imdb.com/title/tt4846340" target="_blank"> // Hidden Figures </a></li>
-									<li><a href="http://www.imdb.com/title/tt0102057" target="_blank"> // Hook </a></li>
-									<li><a href="http://www.imdb.com/title/tt0433400" target="_blank"> // Just Friends </a></li>
-									<li><a href="http://www.imdb.com/title/tt0458352" target="_blank"> // The Devil Wears Prada </a></li>
-									<li><a href="http://www.imdb.com/title/tt0119116" target="_blank"> // The Fifth Element </a></li>
-									<li><a href="http://www.imdb.com/title/tt0157246" target="_blank"> // Will & Grace </a></li>
+									<li><a href="http://www.imdb.com/title/tt1282140" target="_blank"> // Ready Player One </a></li>
+									<li><a href="http://www.imdb.com/title/tt1798709" target="_blank"> // The Martian </a></li>
+									<li><a href="http://www.imdb.com/title/tt0813715" target="_blank"> // The Time Keeper </a></li>
 								</ul>
 							</div>
 						</div>
@@ -197,13 +194,6 @@
 	<script src="js/jquery.min.js"></script>
  <script>
 
-  $(function() {
-          $('.lazy').lazy({
-            effect: "fadeIn",
-            effectTime: 1000,
-            threshold: 500
-          });
-      });
 
  	$(document).ready(function() {
   var url = "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=brockdonaldson&api_key=b88a785049d6bd2a7c92fb9948c72b1b&format=json";
