--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -28,7 +28,7 @@
 			––––––––––––––––––––––––––––––-->
 			<div class="header-desktop">
 				<ul class="header-content flex-header">
-					<li>Brock Donaldson</li>
+					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title" ></span><span class="song-artist"></span></a></li>
@@ -85,12 +85,12 @@
 
 			<div class="section-full flex-center">
 				<div class="gradient-section gradient-blue flex-center">
-					<div class="pull-tech flex-sb">
+					<div class="pull-tech flex-sb grad">
 						<div class="image-double-float">
-							<img src="images/KitsuneAppMockup1.png" alt="Kitsune App Angled Device Mockup">
+							<img src="images/KitsuneAppMockup2.png" alt="Kitsune App Angled Device Mockup">
 						</div>
-						<div class="pull-tech-text white">
-							<h2> Using the app is as simple as connecting to the board and downloading a recent trip. </h2>
+						<div class="pull-tech-text-grad white">
+							<h2> Using the app is as simple as connecting to the board and syncing a recent trip. </h2>
 						</div>
 					</div>
 				</div>
@@ -108,29 +108,103 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneboardSpan.png" alt="Kitsune Board Grip Close Up">
+					<img src="images/KitsuneAppMockup3.png" alt="Kitsune App Board Sycing photo">
 				</div>
 			</div>
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> [INITIAL RESEARCH] </h4>
-					<p>Instead of limiting the board through imitations of designs before it, I created a board that is compact enough for everyday use but with the goal of building a change. To reach this goal, the board itself includes a locking and folding feature which allows ease of transport and storage, as well as an integrated smart application to create a system of engaged, connected users.</p>
+					<h4> [APP FUNCTIONALITY] </h4>
+					<p>While the board acts as a solid product on its own the true value come out of the sycronous use with the companion application. The Kitsune App allows users to gain multiple different improvements to their daily commute. Three overall functions act as the core basis to the Kitsune Board and App.</p>
 
-					<p>The Kitsune Board is directed at wide demographic but at the core is the need and interest of alternative transportation. Many living in urban centres rely heavily on the public transit system. While their current system works, I wanted to present them with improvements. Many do not have luxury of living right outside of a public transit platform; they lose valuable time in the time they take traveling between transit options.</p>
+					<p><strong>Travel Logs</strong><br>An asynchronous connection between board and app will allow users to record travel metrics after each trip. In doing so the app will gather metrics from both the user and board to create an accurate travel history. </p>
 
-					<p>When looking towards the future, I want to explore new possibilities in human commuting behaviour that are rarely reviewed. Looking at how individuals deal with their daily commute and improve on those times by finding wasted areas. These being between transit systems where the user finds themselves walking for five to ten minutes to meet their transfer. Finding solutions to these stress points will allow us to solve the problems as a whole. </p>
+					<p><strong>Smarter Trips</strong><br>The more you use the board the quicker it learns and create smarter routes. Based on past trip data the Kitsune App will be able to calculate which route would be best in current travel conditions such as weather and traffic.  </p>
+
+					<p><strong>Health / Fitness</strong><br>The app also focuses on health and fitness through calorie and goal based metrics. The Kitsune App also allows users to connect using smartwatch; this capability allows for users to track more indepth health and fitness data such as heart rate.   </p>
+				</div>
+			</div>
+
+			<div class="section-full flex-center">
+				<div class="image-span-container">
+					<img src="images/KitsuneAppMockup4.png" alt="Kitsune App Smart Watch Mockup">
+				</div>
+			</div>
+
+			<div class="section-padding flex-center">
+				<div class="content-container">
+					<h4> [COLLABORATION] </h4>
+					<p> In the past couple years there has been a growing trend of sharing and socializing in health and fitness apps. Apps such as Nike+ Run Club and Strava allow users to create goals, track fitness statistics, but with the added bonus of recording and sharing their experience with others. </p>
+
+					<p> In a sense, not only do these apps help for individual growth and improvement but they allow users to find many individuals that are challenging themselves in the same way. Looking into a sharing capability not only allows product awareness but also creates a connected network of users experience and growing together. </p>
+
+					<br><br>
+
+					<h4>[RESEARCH CONCLUSIONS]</h4>
+					<p>In order to reduce the idea of congestion in the western mentality we have to move towards sustainable design with a focus on longevity and function over temporary beauty. If we as consumers look towards new and innovative ways to understand transportation we can reduce our carbon footprint, embrace minimalism and create a sustainable society.</p>
+				</div>
+			</div>
+
+
+
+			<div class="section-full flex-center">
+				<div class="pull-tech-color blue flex-center">
+					<div class="pull-quote flex-column">
+						<h4> Tom Kelley </h4>
+						<h2> Noticing that something is broken is an essential prerequisite for coming up with a creative solution to fix it. </h2>
+					</div>
+				</div>
+			</div>
+
+			<div class="section-padding flex-center">
+				<div class="content-container">
+				<h4>[INITIAL SKETCHES]</h4>
+				<p>Noticing that something is broken is an essential prerequisite for coming up with a creative solution to fix it.</p>
+				</div>
+			</div>
+
+			<div class="section-full flex-center">
+				<div class="pull-tech-color flex-center">
+					<div class="pull-tech-img flex-sb">
+						<div class="image-double">
+							<img src="images/KitsuneAppSketch1.png" alt="Kitsune Board Grip Close Up">
+						</div>
+						<div class="image-double">
+							<img src="images/KitsuneAppSketch2.png" alt="Kitsune Board Grip Close Up">
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="section-full flex-center">
+				<div class="pull-tech-color flex-center">
+					<div class="pull-tech-img flex-sb">
+						<div class="image-double">
+							<img src="images/KitsuneAppSketch3.png" alt="Kitsune Board Grip Close Up">
+						</div>
+						<div class="image-double">
+							<img src="images/KitsuneAppSketch4.png" alt="Kitsune Board Grip Close Up">
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="section-padding flex-center">
+				<div class="content-container">
+					<p>I began the Kitsune app by focusing on 5 key screens: Login Screen, a dashboard displaying most recent ride data, route navigation, an account page, and a ride analytic page. I chose these five screens as my starting point as they act as the entry point for many of the sub level screens. </p>
+
+					<p>Through these initial draft screens I was able to get a handle on how to incorporate planned features, as well as, see how features thought of in the planning phase will have to be altered or changed slightly.</p>
 				</div>
 			</div>
 
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
-					<div class="pull-tech  flex-sb">
+					<div class="pull-tech flex-sb">
 						<div class="pull-tech-text charcoal">
-							<h2> While foldability allows for a more portable solution, it’s also meant to build a strong user/product relationship. </h2>
+							<h2> The Board and App communitcate through installed hardware in the body of the board. </h2>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneBoardTech1.svg"> Kitsune App Technical Drawing (Folding) </object>
+							<object type="image/svg+xml" data="images/KitsuneBoardTech3.svg"> Kitsune App Technical Drawing (Folding) </object>
 						</div>
 					</div>
 				</div>
@@ -138,101 +212,28 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> [RESEARCH CONCLUSION] </h4>
-					<p>In order to reduce the idea of congestion in the western mentality we have to move towards sustainable design with a focus on longevity and function over temporary beauty. If we as consumers look towards new and innovative ways to understand transportation we can reduce our carbon footprint, embrace minimalism and create a sustainable society.</p>
+				<h4>[WIREFRAMES]</h4>
+				<p>Noticing that something is broken is an essential prerequisite for coming up with a creative solution to fix it.</p>
 				</div>
 			</div>
 
 			<div class="section-full flex-center">
-				<div class="pull-tech-color blue flex-center">
-					<div class="pull-quote flex-column">
-						<h4> Johnathan Ives </h4>
-						<h2> There is beauty when something works and it works intuitively, and it doesn’t expect you to have to read an instruction book. </h2>
-					</div>
-				</div>
-			</div>
-
-			<div class="section-padding flex-center">
-				<div class="content-container">
-				<h4>[COMPETITOR RESEARCH]</h4>
-					<p>For this part of the project I started by looking for reference material to help me gauge the general size and dimensions of the board. I looked for weak points in the design of current similar boards and ways to improve them. </p>
-
-					<p>One of the leaders in the plastic skateboard market is Penny. Their boards are popular because of their relatively retro style and size. By looking to their design as inspiration, I could find ways to improve my own board in addition to the customer centred design focus.</p>
-
-					<p>One of the biggest challenges that I find with these styles of boards is the foot placement. In order to stick to an effective size, they made the board thin and sleek. However, with this comes discomfort in how you ride it. Because everyone has varying foot sizes, I found this issue was good starting point to work around when approaching my design.</p>
-				</div>
-			</div>
-
-			 <div class="section-full flex-center">
-				<div class="medium-container">
-							<object type="image/svg+xml" data="images/KitsuneBoardOutline.svg"> Kitsune Board Outline </object>
-				</div>
-			</div>
-
-			<div class="section-padding flex-center">
-				<div class="content-container">
-					<p>I designed the general shape of the board to be 22’’ long and 6’’ wide at the apex. You’ll notice that near the front and back of the board there are two wider sections; this allows for the board to be better accommodating to individual foot placement.</p>
-
-					<p>Another key element that I wanted to explore was an idea based off the flat pack revolution. I looked for ways this product could be easily packed away and accessible. A key to this project is to focus the design around the user.</p>
-					<br>
-					<h4>[USER PERSONAS / JOB STORIES]</h4>
-					<p>In order to allow for a true understanding of the audience this product would be directed towards I created a few user personas to help identify the target audience.</p>
-
-					<p><strong>Jamey 20, Student</strong><br>
-					Jamey is a environmentally conscious student who regularly uses public transit. He is very conscious of his carbon footprint. As he is quite interested in technology he is comfortable exploring and trying new products. However, being a student, Jamey doesn’t have to luxury of frivolous spending. </p>
-
-					<p><strong>Nancy 28, Personal Trainer</strong><br>
-					Nancy is active both during work hours and off hours. She often uses multiple apps to help during her training and workout routines. She is constantly looking for new ways to stay active. She is interested in retaining as much data about her training as possible.</p>
-
-					<p><strong>Thomas 23, Commuter</strong><br>
-					Thomas is a young professional working in the city. He lives a short distance from his transit to work and is looking for a way to help reduce travel time. He often will roller blade from his condo to his train during his commute. This solution however is cumbersome and more effort than it is worth.</p>
-				</div>
-			</div>
-
-
-	<div class="section-full flex-center">
 				<div class="pull-tech-color flex-center">
 					<div class="pull-tech-img flex-sb">
 						<div class="image-double">
-							<img src="images/KitsuneAppMockup1.png" alt="Kitsune App Angled Device Mockup">
+							<img src="images/KitsuneAppWireframe1.png" alt="Kitsune Wireframe 1&2">
 						</div>
 						<div class="image-double">
-							<img src="images/KitsuneBoard3.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneAppWireframe2.png" alt="Kitsune Wireframe 3&4">
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="section-padding flex-center">
-				<div class="content-container">
-					<h4> [PRODUCT RESEARCH] </h4>
-					<p>In order to find a cohesive solution to the problems presented in the user personas I put together some key touch points I wanted to address when creating the product.</p>
 
-					<p><strong>Portability</strong><br>In Thomas’ daily commute he is require to get to and from the train station by roller blading. Once there, however, he must remove and is then tasked with carrying cumbersome rollerblade with him on this way to the office. </p>
-
-					<p>With the Kitsune Board I wanted to look for a way to reduce this awkward nature of having to deal with the product when it was not in use. In order to do so I looked at designing it in such a way that would allow the use to fold the board and store it in their backpack. I also wanted to look for a way that the board could be easily carried if the user did not have a bag to place it in.</p>
-
-					<p><strong>Connectivity</strong><br>Nancy, like many users today gain more out the product when it is paired with a mobile component. From the beginning I knew I was not only going to be designing a physical product but an experience that would link both the user and the product together.</p>
-
-					<p>To do this I looked toward NFC Technology and a mobile component that would allow for a user to feel more engagement with the technology at hand rather than becoming a passive user. </p>
-
-					<p><strong>Functionality</strong><br>In order to build a solid product I needed to make sure that it fulfilled a multitude of user needs rather than a short list. How would the product be used by multiple different users in different ways. I understood there needed to be a strong foundation through the design and connectivity of the product in order to allow for these unique use cases to be able to take hold.</p>
-				</div>
-			</div>
-
-			<div class="section-full flex-center">
-				<div class="pull-tech-color blue flex-center">
-					<div class="pull-tech  flex-sb">
-						<div class="pull-tech-text">
-							<h4> [BRAND CREATION]</h4>
-							<p> The name Kitsune comes from the Japanese word for Fox. Common figures in Japanese folklore, the kitsune are often depicted as tricksters, but can also represent wisdom and transformation.</p>
-
-							<p>A common trait related to the Kitsune is shapeshifting—a trait that I want to be prevalent when designing the skateboard. As skateboarding is sometimes seen as a unique and youthful mode of transportation, I wanted to find a brand figure that relates to those tropes, while also bringing in new traits to the product. </p>
-						</div>
-						<div class="pull-tech-drawing-c">
-							<object type="image/svg+xml" data="images/KitsuneLogo.svg"> Kitsune Logo </object>
-						</div>
-					</div>
+		<div class="section-full flex-center">
+				<div class="image-span-container">
+					<img src="images/KitsuneAppMockup6.png" alt="Kitsune App Smart Watch Mockup">
 				</div>
 			</div>
 
@@ -278,11 +279,11 @@
 				<div class="pull-tech-color blue flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
 						<div class="cto-text white">
-							<h2>The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2>
+							<h2>The companion product acts as the base for the added functionality of the Kitsune mobile app.</h2>
 							<h4>View Case Study</h4>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneAppCTO.svg"> Kitsune App CTO </object>
+							<object type="image/svg+xml" data="images/KitsuneBoardCTO.svg"> Kitsune App CTO </object>
 						</div>
 					</div>
 				</div>
@@ -316,7 +317,7 @@
 <script src="js/jquery.min.js"></script>
  <script>
 
- 		$(document).ready(function() {
+ 			$(document).ready(function() {
   var url = "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=brockdonaldson&api_key=b88a785049d6bd2a7c92fb9948c72b1b&format=json";
   $.getJSON(url, function(data) {
     var artist = data.recenttracks.track[0].artist["#text"];
@@ -330,7 +331,6 @@
    			$('.song-artist').html("– " +artist+"\ ");
 
   });
-});
 
 
  	//Skateboard Parallax Scroll Effect-----------
